--- a/PR123-MaterialToolbarDropdown/app/src/main/res/layout/activity_main.xml
+++ b/PR123-MaterialToolbarDropdown/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/statusBarHeight"
+        android:background="@color/colorPrimaryDark"/>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="@dimen/abc_action_bar_default_height_material"
         android:background="@color/colorPrimary"
-        android:paddingTop="@dimen/statusBarPaddingTop"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ToolbarTheme">
+        android:theme="@style/ToolbarTheme">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -21,13 +27,12 @@
                 android:id="@+id/spn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:dropDownVerticalOffset="-10dp" />
+                android:dropDownVerticalOffset="@dimen/spinner_verticlaOffset" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     <FrameLayout
         android:id="@+id/flContenido"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar" />
+        android:layout_height="match_parent" />
 
-</RelativeLayout>
+</LinearLayout>
