--- a/PR123-MaterialToolbarDropdown/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/PR123-MaterialToolbarDropdown/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -3,7 +3,7 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    style="@style/Base.TextAppearance.AppCompat.Body1"
     android:gravity="center_vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
