--- a/PR123-MaterialToolbarDropdown/app/src/main/res/values-v21/styles.xml
+++ b/PR123-MaterialToolbarDropdown/app/src/main/res/values-v21/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <style name="AppTheme" parent="AppThemeBase">
         <!-- StatusBar transparente -->
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
     </style>
 </resources>
