--- a/PR123-MaterialToolbarDropdown/app/src/main/res/values/dimens.xml
+++ b/PR123-MaterialToolbarDropdown/app/src/main/res/values/dimens.xml
@@ -1,14 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    
     <!-- fragment_info.xml -->
     <dimen name="info_marginTop">32dp</dimen>
-    <dimen name="lblGusta_textSize">32dp</dimen>
-
-    <!-- En las API < 19, la status bar no puede ser transparente, por lo que la toolbar
-    no tendrá padding Top. Se mostrará justo debajo de la status bar -->
-    <dimen name="statusBarPaddingTop">0dp</dimen>
-    <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="lblGusta_textSize">32sp</dimen>
+    <!-- En las API < 19, la status bar no puede ser transparente, por lo que
+     no se mostrará la vista detrás -->
+    <dimen name="statusBarHeight">0dp</dimen>
+    <dimen name="spinner_verticlaOffset">-35dp</dimen>
 </resources>
