--- a/PR118-SearchView/app/src/main/res/menu/menu_activity_main.xml
+++ b/PR118-SearchView/app/src/main/res/menu/menu_activity_main.xml
@@ -6,7 +6,7 @@
         android:id="@+id/mnuBuscar"
         android:title="@string/buscar"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
     <item
