--- a/PR107-RecyclerViewAddOns/app/src/main/res/layout/activity_main.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,53 +7,38 @@
         android:id="@+id/lstAlumnos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="56dp"
-        android:paddingTop="8dp" />
+        android:paddingBottom="8dp"
+        android:paddingTop="?attr/actionBarSize"
+        android:fadeScrollbars="false"
+        android:clipToPadding="false" />
+
+    <include layout="@layout/toolbar" />
 
     <TextView
         android:id="@+id/lblNoHayAlumnos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:drawablePadding="@dimen/empty_drawablePadding"
         android:drawableTop="@drawable/ic_no_hay_alumnos"
         android:text="@string/no_hay_alumnos"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <FrameLayout
-        android:id="@+id/frlBottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:background="@color/bottomBarBackground">
-
-        <TextView
-            android:id="@+id/lblNumAlumnos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:layout_marginLeft="16dp"
-            android:text="@string/grupo" />
-
-    </FrameLayout>
-
     <com.software.shell.fab.ActionButton
         android:id="@+id/btnAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
         android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
         fab:button_color="@color/fab_material_pink_500"
         fab:button_colorPressed="@color/fab_material_pink_900"
         fab:image="@drawable/fab_plus_icon"
         fab:show_animation="@anim/fab_roll_from_down"
         fab:hide_animation="@anim/fab_roll_to_down" />
-</RelativeLayout>
+
+</FrameLayout>
 
 
 
