--- a/PR107-RecyclerViewAddOns/app/src/main/res/values/dimens.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/values/dimens.xml
@@ -1,24 +1,22 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
     <!-- MainActivity -->
     <dimen name="panel_margin">4dp</dimen>
-    <!-- Boton -->
-    <dimen name="boton_cornersRadius">4dp</dimen>
-    <dimen name="boton_padding">4dp</dimen>
-    <dimen name="boton_size">48dp</dimen>
-    <!-- Divider -->
-    <dimen name="divider_height">2dp</dimen>
-    <dimen name="divider_padding">10dp</dimen>
     <!-- Empty View -->
     <dimen name="empty_drawablePadding">10dp</dimen>
-    <!-- Button -->
-    <dimen name="diameter">56dp</dimen>
-    <dimen name="elevation_low">1dp</dimen>
-    <dimen name="elevation_high">4dp</dimen>
-    <dimen name="add_button_margin">16dp</dimen>
+    <!-- Toolbar -->
+    <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <!-- Single line with avatar list item -->
+    <dimen name="two_line_tile_height">72dp</dimen>
+    <dimen name="two_line_avatar_width">40dp</dimen>
+    <dimen name="two_line_avatar_height">40dp</dimen>
+    <dimen name="two_line_avatar_marginTop">20dp</dimen>
+    <dimen name="two_line_avatar_marginLeft">16dp</dimen>
+    <dimen name="two_line_text_paddingTop">18dp</dimen>
+    <dimen name="two_line_secundary_text_paddingBottom">20dp</dimen>
+    <dimen name="two_line_text_paddingLeft">72dp</dimen>
+    <dimen name="two_line_text_marginRight">16dp</dimen>
+    <dimen name="two_line_secundary_icon_width">32dp</dimen>
 
 
 </resources>
