--- a/PR107-RecyclerViewAddOns/app/src/main/res/layout/activity_main.xml
+++ b/PR107-RecyclerViewAddOns/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,17 @@
         android:text="@string/no_hay_alumnos"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <!-- Para el drag & drop -->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/overlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+    <!-- Fin para el drag & drop -->
+
     <com.software.shell.fab.ActionButton
         android:id="@+id/btnAgregar"
         android:layout_width="wrap_content"
