--- a/PR136-Parallax/app/src/main/res/layout/toolbar.xml
+++ b/PR136-Parallax/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    android:background="@color/colorPrimary"
     android:minHeight="@dimen/abc_action_bar_default_height_material"
     android:elevation="@dimen/toolbar_elevation"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
