--- a/PR137-ParallaxRecyclerView/app/src/main/res/layout/activity_main_item.xml
+++ b/PR137-ParallaxRecyclerView/app/src/main/res/layout/activity_main_item.xml
@@ -26,6 +26,7 @@
         android:paddingLeft="@dimen/two_line_text_paddingLeft"
         android:paddingTop="@dimen/two_line_text_paddingTop"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         tools:text="Baldomero Llegate Ligero"
@@ -40,6 +41,7 @@
         android:paddingBottom="@dimen/two_line_secundary_text_paddingBottom"
         android:paddingLeft="@dimen/two_line_text_paddingLeft"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/lblNombre"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
