--- a/PR136-Parallax/app/src/main/res/values/dimens.xml
+++ b/PR136-Parallax/app/src/main/res/values/dimens.xml
@@ -1,8 +1,7 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="image_height">200dp</dimen>
     <dimen name="text_padding">20dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="titulo_textSize">20sp</dimen>
+    <dimen name="toolbar_icon_paddingLeft">60dp</dimen>
 </resources>
