--- a/PR050-ActionBar/app/src/main/res/menu/fragment_info.xml
+++ b/PR050-ActionBar/app/src/main/res/menu/fragment_info.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/mnuFoto"
-        android:icon="@android:drawable/ic_menu_gallery"
+        android:icon="@drawable/ic_action_photo"
         android:orderInCategory="100"
         app:showAsAction="ifRoom|withText"
         android:title="@string/foto"/>
