--- a/PR132-ShareActionProvider/app/src/main/res/values/styles.xml
+++ b/PR132-ShareActionProvider/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/accent</item>
         <item name="actionModeBackground">@color/actionModeBackground</item>
         <item name="actionMenuTextColor">@color/actionMenuTextColor</item>
+        <item name="actionBarPopupTheme">@style/Theme.AppCompat.Light</item>
     </style>
 
 </resources>
