--- a/PR010-ScrollView/app/src/main/res/layout/activity_main.xml
+++ b/PR010-ScrollView/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@color/primary_light"
-        android:padding="@dimen/panel_padding">
+        android:paddingLeft="@dimen/panel_paddingLeft"
+        android:paddingRight="@dimen/panel_paddingRight"
+        android:paddingTop="@dimen/panel_paddingTop"
+        android:paddingBottom="@dimen/panel_paddingBottom"
+        >
 
         <EditText
             android:id="@+id/txtMensaje"
@@ -58,9 +62,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/panel_padding"
-            android:layout_marginStart="@dimen/panel_padding"
-            android:src="@android:drawable/ic_menu_send"
+            android:layout_marginLeft="@dimen/panel_paddingRight"
+            android:layout_marginStart="@dimen/panel_paddingRight"
+            android:src="@drawable/ic_action_send"
             android:padding="@dimen/button_padding"
             android:clickable="true"
             android:contentDescription="@string/enviar"/>
