--- a/PR010-ScrollView/app/src/main/res/values/dimens.xml
+++ b/PR010-ScrollView/app/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <resources>
 
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="panel_padding">4dp</dimen>
+    <dimen name="panel_paddingTop">8dp</dimen>
+    <dimen name="panel_paddingBottom">8dp</dimen>
+    <dimen name="panel_paddingLeft">16dp</dimen>
+    <dimen name="panel_paddingRight">8dp</dimen>
     <dimen name="button_padding">8dp</dimen>
 
     <integer name="txtMensaje_maxLines">5</integer>
