--- a/PR094-SlidingTabLayout/app/src/main/res/layout/fragment_main.xml
+++ b/PR094-SlidingTabLayout/app/src/main/res/layout/fragment_main.xml
@@ -1,21 +1,34 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="es.iessaladillo.pedrojoya.pr094.MainActivity$PlaceholderFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="es.iessaladillo.pedrojoya.pr094.MainActivity$PlaceholderFragment">
 
-    <com.example.android.common.view.SlidingTabLayout
-        android:id="@+id/stTabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        android:elevation="@dimen/toolbar_elevation" />
-
-    <android.support.v4.view.ViewPager xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v4.view.ViewPager
         android:id="@+id/vpPaginador"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" />
+        android:clipToPadding="false"
+        android:paddingTop="@dimen/cab_height"
+        tools:context=".MainActivity"/>
 
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llCabecera"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/toolbar"/>
+
+        <com.example.android.common.view.SlidingTabLayout
+            android:id="@+id/stTabs"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tab_height"
+            android:background="@color/primary"
+            android:elevation="@dimen/toolbar_elevation"/>
+
+    </LinearLayout>
+
+</FrameLayout>
