--- a/PR100-IntentService/app/src/main/res/menu/activity_main_contextual.xml
+++ b/PR100-IntentService/app/src/main/res/menu/activity_main_contextual.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/mnuEliminar"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:icon="@drawable/ic_action_delete"
         app:showAsAction="ifRoom|withText"
         android:title="@string/eliminar"/>
 
