--- a/PR100-IntentService/app/src/main/res/layout/activity_main.xml
+++ b/PR100-IntentService/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/lstAlumnos"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/list_paddingTop"
-        android:paddingBottom="@dimen/list_paddingBottom"/>
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/lblEmpty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/no_hay_alumnos_en_la_lista"/>
+        <com.github.ksoichiro.android.observablescrollview.ObservableListView
+            android:id="@+id/lstAlumnos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/lblEmpty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_hay_alumnos_en_la_lista"/>
+    </FrameLayout>
+
+    <com.software.shell.fab.ActionButton
+        android:id="@+id/btnExportar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        fab:button_color="@color/accent"
+        fab:button_colorPressed="@color/accent_light"
+        fab:image="@drawable/ic_action_send"
+        fab:show_animation="@anim/fab_roll_from_down"
+        fab:hide_animation="@anim/fab_roll_to_down" />
 
 </FrameLayout>
