PR102 fix material icons

--- a/PR095-DownloadManager/app/src/main/res/menu/activity_main.xml
+++ b/PR095-DownloadManager/app/src/main/res/menu/activity_main.xml
@@ -5,7 +5,7 @@
     
     <item android:id="@+id/mnuDescargas"
         android:title="@string/descargas"
-        android:icon="@android:drawable/ic_menu_view"
+        android:icon="@drawable/ic_action_downloads"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
 </menu>
