--- a/PR095-DownloadManager/app/src/main/res/layout/activity_main.xml
+++ b/PR095-DownloadManager/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+
+    <com.github.ksoichiro.android.observablescrollview.ObservableListView
         android:id="@+id/lstCanciones"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
